# web-auth-mcp

./: .env.example  CHROME_PASSWORD_MANAGER.md  README.md  TROUBLESHOOTING.md  example_http_client.py  example_password_manager.py  example_usage.py  install.sh  mcp_config.json  mcp_config_example.json  pyproject.toml  requirements.txt  test_auth_timing.py  test_browser_auth.py  test_chrome_profile_fix.py  test_jira_access.py  test_oreilly_access.py  test_password_manager.py  test_server_init.py  troubleshoot_http.md
src/web_auth_mcp/: __init__.py  auth_handler.py  config.py  http_client.py  server.py
src/web_auth_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_auth_handler.py  test_http_client.py
